--- a/tp03/tp03_bootstrap.html
+++ b/tp03/tp03_bootstrap.html
@@ -163,8 +163,7 @@
         <div class="row">
             <div class="col-lg-3">
                 <div class="row"><img class="img-responsive" src="atn.png" alt=""></div>
-                <div class="row">
-                    <div class="col-lg-12">ATN</div>
+                <div class="row">ATN
                 </div>
                 <div class="row"><p>Accompagnement de la Transformation Numérique : permet de comprendre comment, grâce
                     au SI, on peut ajouter de la valeur à la plupart des activités de l'organisation</p></div>
@@ -172,8 +171,7 @@
             <div class="col-lg-1"></div>
             <div class="col-lg-3">
                 <div class="row"><img class="img-responsive" src="ipl.png" alt=""></div>
-                <div class="row">
-                    <div class="col-lg-12">IPL</div>
+                <div class="row">IPL
                 </div>
                 <div class="row"><p>Innovation Par le Logiciel : forme à la conception et à la mise en oeuvre de projets
                     logiciels en équipe depuis la preuve de concept jusqu'à l'industrialisation de la production
@@ -182,8 +180,7 @@
             <div class="col-lg-1"></div>
             <div class="col-lg-3">
                 <div class="row"><img src="vdc.png" alt=""></div>
-                <div class="row">
-                    <div class="col-lg-12">VDC</div>
+                <div class="row">VDC
                 </div>
                 <div class="row"><p>Valorisation des Données et des Connaissances : développe les compétences qui
                     permettent de passer de la donnée brute à de l'information actionnable tout endéveloppant un regard
@@ -289,6 +286,19 @@
             <label class="radio-inline">
                 <input type="radio" name="sexe"> Féminin
             </label>
+        </div>
+
+        <div class="form-group">
+            <label for="modules">Origine des étudiants</label>
+            <select size="1" name="origine" id="ori" class="form-control">
+                    <option value="tc">TC de l'UTT</option>
+                    <option value="info">DUT INFO</option>
+                    <option value="ge21">DUT GE21</option>
+                    <option value="stid">DUT STID</option>
+                    <option value="autre">DUT autre</option>
+                    <option value="science">Prépa scientifique</option>
+                    <option value="bl">Prépa B/L</option>
+            </select>
         </div>
 
         <div class="form-group">
