--- a/tp03/tp03_bootstrap.html
+++ b/tp03/tp03_bootstrap.html
@@ -53,7 +53,7 @@
       </div>
     </div>
 
-    <div class="panel visible-lg-inline-block">
+    <div class="panel visible-lg-inline-block visible-sm-inline-block">
       <div class="btn-group " role="group">
         <button type="button" class="btn btn-default"><a href="">TCBR</a></button>
         <button type="button" class="btn btn-default"><a href="">FIL</a></button>
@@ -73,7 +73,7 @@
       </div>
     </div>
 
-    <div class="panel visible-lg-inline-block">
+    <div class="panel visible-lg-inline-block visible-sm-inline-block">
       <button class="btn btn-success" type="button">
         ATN
       </button>
